@@ -1,3 +1,8 @@
+2009-02-04  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCmdMZ.c:	Prevent crashes due to int overflow of the
+	length of the result of [string repeat].  [Bug 2561746]
+
 2009-02-03  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* macosx/tclMacOSXFCmd.c - eliminate some unnessary type casts
